syntax = "proto3";

package student_service;

service StudentService {
    rpc StudentCreate(Student) returns (StudentResp);
    rpc StudentGet(ByIdReq) returns (StudentResp);
    rpc StudentSignUp(Token) returns (StudentResp);
    rpc StudentList(ListReq) returns (StudentListResp);
    rpc StudentGroupList(ListIdReq) returns (StudentListResp);
    rpc StudentLogin(LoginStudentReq) returns (StudentLoginResp);
    rpc StudentUpdate(Student) returns (StudentResp);
    rpc StudentDelete(ByIdReq) returns (EmptyRes);

    rpc LeadCreate(Lead) returns (LeadResp);
    rpc LeadGet(ByIdReq) returns (LeadResp);
    rpc LeadList(ListReq) returns (LeadListResp);
    rpc LeadActive(EmptyRes) returns (RespList);
    rpc LeadUpdate(Lead) returns (LeadResp);
    rpc LeadDelete(ByIdReq) returns (EmptyRes);
    
    rpc StudentActive(EmptyRes) returns (RespList);
    rpc StudentDeleteList(EmptyRes) returns (RespList);
    rpc StudentTopList(EmptyRes) returns (RespList);
    rpc StudentProfit(EmptyRes) returns (ProfitRespList);

    rpc StudentPhoneCreate(SPhone) returns (SPhone);
    rpc StudentPhoneGet(ByIdReq) returns (SPhone);
    rpc StudentPhoneDelete(ByIdReq) returns (EmptyRes);

    rpc LeadPhoneCreate(LPhone) returns (LPhone);
    rpc LeadPhoneGet(ByIdReq) returns (LPhone);
    rpc LeadPhoneDelete(ByIdReq) returns (EmptyRes);
}

message EmptyRes{}

message Student{
    string id = 1;
    string full_name = 2;
    string phone = 3;
    string password = 4;
    string birthday = 5;
    string gender = 6;
    string address = 7;
    string group_id = 8;
    string comment = 9;
}

message SPhone{
    string id = 1;
    string whose = 2;
    string phone = 3;
    string student_id = 4;
    string created_at = 5;
    string updated_at = 6;
}

message LPhone{
    string id = 1;
    string whose = 2;
    string phone = 3;
    string lead_id = 4;
    string created_at = 5;
    string updated_at = 6;
}

message LeadPhone{
    string lead_id = 1;
    string phone_id = 2;
}

message By {
    string id = 1;
    string name = 2;
}

message StudentResp{
    string id = 1;
    string full_name = 2;
    string phone = 3;
    string password = 4;
    string birthday = 5;
    string gender = 6;
    repeated SPhone phones = 7;
    string address = 8;
    By group_id = 9;
    string comment = 10;
    string created_at = 11;
    string updated_at = 12;
}


message Lead{
    string id = 1;
    string full_name = 2;
    string birthday = 3;
    string gender = 4;
    string address = 5; 
    string source = 6;
    string phone = 7;
    string comment = 8;
    string user_id = 9;
    string direction_id = 10;
}

message LeadResp{
    string id = 1;
    string full_name = 2;
    repeated LPhone phones = 3;
    string birthday = 4;
    string gender = 5;
    string address = 6; 
    string source = 7;
    string phone = 8;
    string comment = 9;
    By user_id = 10;
    By direction_id = 11;
    string created_at = 12;
    string updated_at = 13;
}

message ListIdReq {
    int64 page = 1;
    int64 limit = 2;
    string id = 3;
}

message LoginStudentReq {
    string phone = 1;
    string password = 2;
}

message StudentListResp {
    repeated StudentResp students = 1;
    int64 count = 2;
}

message StudentLoginResp {
    bool ok = 1;
    string token = 2;
    string whoami = 3;
}

message LeadListResp {
    repeated LeadResp leads = 1;
    int64 count = 2;
}

message ListReq {
    int64 page = 1;
    int64 limit = 2;
}    

message Token{
    string token = 1;
}    

message ByIdReq {
    string id = 1;
}

message Resp{
    int64 count = 1;
};

message RespList{
    repeated Resp count = 1;
};

message ProfitResp{
    string name = 1;
    float count = 2;
};

message ProfitRespList{
    float count = 1;
    repeated ProfitResp direction = 2;
};

message StudentPhone{
    string student_id = 1;
    string phone_id = 2;
}